# Gestio-Agraria-PY2-Lenguajes

./: .gitignore  CHANGELOG.md  Datos de conexion  Datos de conexion.txt  Instalacion de librerias.txt  LICENSE  ProyePruebaM.cabal  README.md
PP2_Eduardo_Bryan/: info.txt
Script/: GestionDeCosechasScript.sql  ScriptBase.txt
app/: Main.hs
data/: Herramientas.csv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
